[package]
name = "transform-stream"
version = "0.1.1"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"
description = "Lightweight async stream wrapper"
license = "MIT"
repository = "https://github.com/Nugine/transform-stream"
keywords = ["async"]
categories = ["asynchronous"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic_refcell = "0.1.6"
futures-core = "0.3.5"
pin-project-lite = "0.1.10"

[dev-dependencies]
futures = "0.3.5"
memchr = "2.3.3"
