[package]
name = "transform-stream"
version = "0.2.0-dev"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2018"
description = "Lightweight async stream wrapper"
license = "MIT"
repository = "https://github.com/Nugine/transform-stream"
keywords = ["async"]
categories = ["asynchronous"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-core = "0.3.5"

[dev-dependencies]
futures-executor = "0.3.5"
futures-util = "0.3.17"
