[package]
name = "transform-stream"
version = "0.3.1"
authors = ["Nugine <nugine@foxmail.com>"]
edition = "2021"
description = "Lightweight async stream wrapper"
license = "MIT"
repository = "https://github.com/Nugine/transform-stream"
keywords = ["async"]
categories = ["asynchronous"]
readme = "README.md"

[dependencies]
futures-core = "0.3.31"

[dev-dependencies]
futures-executor = "0.3.31"
futures-util = "0.3.31"
